# CSG-project

./: .gitignore  CMakeLists.txt  RunMultiplePerfTests.bat  RunMultipleQualityTests.bat  RunPerfTest.bat  RunQualityTest.bat  RunTests.bat  SetEnv.bat  StructuralSampler.sln  notes.txt  papers.txt  schedule.txt  summary_problems&results.txt
StructuralSampler/: StructuralSampler.vcxproj  StructuralSampler.vcxproj.filters
StructuralSampler/headers/: Algorithm.h  CommandLineHelper.h  ComponentDescription.h  ConsoleColor.h  Graph.h  GraphInput.h  GraphManager.h  RandomizedInput.h  ReservoirManager.h  StackInputs.h  Tests.h  Visualize.h  WindowManager.h
StructuralSampler/src/: Algorithm.cpp  CommandLineHelper.cpp  Graph.cpp  GraphInput.cpp  GraphManager.cpp  RandomizedInput.cpp  ReservoirManager.cpp  StackInputs.cpp  Tests.cpp  Visualize.cpp  WindowManager.cpp  main.cpp
documents/Plots/: Plots.tex
documents/diagrams/: algorithms.gv  clustering.gv  edgelist.gv  generate.bat  graph.gv  inputs.gv  overview.gv  stackinputs.gv  tests.gv  timedgraph.gv  total.gv
documents/final report/: final.tex
documents/report 1/: report.tex
documents/report 2/: report.tex
sampledata/: fruits  fruits.labels
